--- a/learning-ios/Base.lproj/Main.storyboard
+++ b/learning-ios/Base.lproj/Main.storyboard
@@ -58,9 +58,18 @@
                                     <segue destination="3F7-Ms-d39" kind="show" id="umN-4e-Tk1"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xt5-7m-9hV">
+                                <rect key="frame" x="20" y="336" width="169" height="30"/>
+                                <state key="normal" title="CustomUICollectionView"/>
+                                <connections>
+                                    <segue destination="pPL-lw-Z18" kind="show" id="19t-yC-Rwg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="xt5-7m-9hV" firstAttribute="top" secondItem="xyN-55-INs" secondAttribute="bottom" constant="8" id="077-nF-iNl"/>
+                            <constraint firstItem="xt5-7m-9hV" firstAttribute="leading" secondItem="xyN-55-INs" secondAttribute="leading" id="0ZL-Pf-bZp"/>
                             <constraint firstItem="xyN-55-INs" firstAttribute="top" secondItem="hGo-Dk-eAY" secondAttribute="bottom" constant="8" id="3Kc-zm-Ir4"/>
                             <constraint firstItem="tzD-2c-tXT" firstAttribute="leading" secondItem="mB0-4R-kMv" secondAttribute="leading" id="4A4-EZ-4YG"/>
                             <constraint firstItem="xyN-55-INs" firstAttribute="leading" secondItem="hGo-Dk-eAY" secondAttribute="leading" id="K9n-2l-YEs"/>
@@ -147,6 +156,44 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="98I-PC-UPp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-10.144927536231885" y="867.85714285714278"/>
+        </scene>
+        <!--Example Custom CellUI Collection View Controller-->
+        <scene sceneID="Fc5-Ep-xPx">
+            <objects>
+                <viewController id="pPL-lw-Z18" customClass="ExampleCustomCellUICollectionViewController" customModule="learning_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RQg-j5-zIe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Xxc-P8-vsk">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ulA-6M-OfF">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="kub-tg-abA" firstAttribute="bottom" secondItem="Xxc-P8-vsk" secondAttribute="bottom" id="ABV-d2-eMT"/>
+                            <constraint firstItem="Xxc-P8-vsk" firstAttribute="top" secondItem="kub-tg-abA" secondAttribute="top" id="emO-lr-bem"/>
+                            <constraint firstItem="kub-tg-abA" firstAttribute="trailing" secondItem="Xxc-P8-vsk" secondAttribute="trailing" id="pH4-I5-wlC"/>
+                            <constraint firstItem="Xxc-P8-vsk" firstAttribute="leading" secondItem="kub-tg-abA" secondAttribute="leading" id="qLZ-ZK-9AL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="kub-tg-abA"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Smp-bH-xVO"/>
+                    <connections>
+                        <outlet property="customUICollectionView" destination="Xxc-P8-vsk" id="HRR-vC-AAE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HRE-bW-z3v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="16" y="1592"/>
         </scene>
         <!--Counter Mvvm View Controller-->
         <scene sceneID="Ole-72-efD">
