--- a/learning-ios/Base.lproj/Main.storyboard
+++ b/learning-ios/Base.lproj/Main.storyboard
@@ -93,6 +93,13 @@
                                     <segue destination="FLE-Gj-CPr" kind="show" id="l4h-2K-O5E"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dki-rm-6Ll">
+                                <rect key="frame" x="20" y="526" width="126" height="30"/>
+                                <state key="normal" title="NotificationCenter"/>
+                                <connections>
+                                    <segue destination="gtn-qv-pI9" kind="show" id="avA-Lc-no7"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -100,6 +107,8 @@
                             <constraint firstItem="xt5-7m-9hV" firstAttribute="leading" secondItem="xyN-55-INs" secondAttribute="leading" id="0ZL-Pf-bZp"/>
                             <constraint firstItem="xyN-55-INs" firstAttribute="top" secondItem="hGo-Dk-eAY" secondAttribute="bottom" constant="8" id="3Kc-zm-Ir4"/>
                             <constraint firstItem="tzD-2c-tXT" firstAttribute="leading" secondItem="mB0-4R-kMv" secondAttribute="leading" id="4A4-EZ-4YG"/>
+                            <constraint firstItem="dki-rm-6Ll" firstAttribute="top" secondItem="zib-8S-Tkv" secondAttribute="bottom" constant="8" id="7ZQ-oO-i6g"/>
+                            <constraint firstItem="dki-rm-6Ll" firstAttribute="leading" secondItem="zib-8S-Tkv" secondAttribute="leading" id="9DH-lp-trK"/>
                             <constraint firstItem="zib-8S-Tkv" firstAttribute="leading" secondItem="W4c-Ew-Gs8" secondAttribute="leading" id="AXQ-jV-OLE"/>
                             <constraint firstItem="LdP-tB-JV6" firstAttribute="leading" secondItem="xt5-7m-9hV" secondAttribute="leading" id="Eu5-9P-qTG"/>
                             <constraint firstItem="W4c-Ew-Gs8" firstAttribute="leading" secondItem="vE1-qc-z7e" secondAttribute="leading" id="F1p-BM-ceF"/>
@@ -319,6 +328,59 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nug-L1-wrd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1916" y="-957"/>
+        </scene>
+        <!--Notification Center View Controller-->
+        <scene sceneID="LJ2-ct-XNi">
+            <objects>
+                <viewController id="gtn-qv-pI9" customClass="NotificationCenterViewController" customModule="learning_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nMe-kk-PWK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4aA-Va-BuE">
+                                <rect key="frame" x="8" y="96" width="398" height="34"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o15-Uo-3nc">
+                                        <rect key="frame" x="0.0" y="0.0" width="354" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zmQ-Zy-8Y2">
+                                        <rect key="frame" x="362" y="0.0" width="36" height="34"/>
+                                        <state key="normal" title="Send"/>
+                                        <connections>
+                                            <action selector="didTapSend:" destination="gtn-qv-pI9" eventType="touchDown" id="zfS-c9-3gn"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8r0-oV-gpE">
+                                <rect key="frame" x="8" y="138" width="398" height="20.333333333333343"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="8r0-oV-gpE" firstAttribute="leading" secondItem="Upx-U4-Nqa" secondAttribute="leading" constant="8" id="0va-8A-pFf"/>
+                            <constraint firstItem="4aA-Va-BuE" firstAttribute="top" secondItem="Upx-U4-Nqa" secondAttribute="top" constant="8" id="Adb-In-Cr4"/>
+                            <constraint firstItem="4aA-Va-BuE" firstAttribute="leading" secondItem="Upx-U4-Nqa" secondAttribute="leading" constant="8" id="SN5-X4-esw"/>
+                            <constraint firstItem="8r0-oV-gpE" firstAttribute="top" secondItem="4aA-Va-BuE" secondAttribute="bottom" constant="8" id="aAI-SZ-iSS"/>
+                            <constraint firstItem="Upx-U4-Nqa" firstAttribute="trailing" secondItem="4aA-Va-BuE" secondAttribute="trailing" constant="8" id="iRp-Xf-NwG"/>
+                            <constraint firstItem="Upx-U4-Nqa" firstAttribute="trailing" secondItem="8r0-oV-gpE" secondAttribute="trailing" constant="8" id="trS-Zk-Twu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Upx-U4-Nqa"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="3bh-N1-pfa"/>
+                    <connections>
+                        <outlet property="sendValueLabel" destination="8r0-oV-gpE" id="vZY-Se-2vm"/>
+                        <outlet property="textField" destination="o15-Uo-3nc" id="KQx-g2-jP5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uHD-89-46g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-782" y="-1313"/>
         </scene>
         <!--Combine View Controller-->
         <scene sceneID="xpa-bC-WLy">
